Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Answer_30__c.field-meta.xml
<CustomField>
    <fullName>Answer_30__c</fullName>
    <label>Answer 30</label>
    <length>255</length>
    <type>Text</type>
</CustomField>