Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Answer_31__c.field-meta.xml
<CustomField>
    <fullName>Answer_31__c</fullName>
    <label>Answer 31</label>
    <length>255</length>
    <type>Text</type>
</CustomField>