Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Answer_32__c.field-meta.xml
<CustomField>
    <fullName>Answer_32__c</fullName>
    <label>Answer 32</label>
    <length>255</length>
    <type>Text</type>
</CustomField>