Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Assignment_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Job_Role__c</fullName>
    <label>Assignment Job Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>