Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Assignment_Location__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Location__c</fullName>
    <label>Assignment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>