Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/BA_Consultant__c.field-meta.xml
<CustomField>
    <fullName>BA_Consultant__c</fullName>
    <label>BA Consultant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>