Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/BT_Agency_Work_Awarness__c.field-meta.xml
<CustomField>
    <fullName>BT_Agency_Work_Awarness__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you aware that you will be working on a shift basis and on a flexible contract via an agency?</inlineHelpText>
    <label>Agency Work Awarness</label>
    <type>Checkbox</type>
</CustomField>