Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>