Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Current_Assignment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Assignment_Start_Date__c</fullName>
    <label>Current Assignment Start Date</label>
    <type>Date</type>
</CustomField>