Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>