Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Length_Of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Length_Of_Placement__c</fullName>
    <label>Length Of Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>Summer placement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>