Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Length_of_service__c.field-meta.xml
<CustomField>
    <fullName>Length_of_service__c</fullName>
    <label>Length of service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>