Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Minimum_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Pay_Rate__c</fullName>
    <label>Minimum Pay Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>