Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/NHS_Accessibility_Requirements_Details__c.field-meta.xml
<CustomField>
    <fullName>NHS_Accessibility_Requirements_Details__c</fullName>
    <inlineHelpText>Please provide further details - please note we may ask more around this on the telephone screen to ensure we can make any reasonable adjustments that may be required:</inlineHelpText>
    <label>Accessibility Requirements Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>