Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/NHS_Weekend_Work__c.field-meta.xml
<CustomField>
    <fullName>NHS_Weekend_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you able to work weekends?</inlineHelpText>
    <label>Able to work weekends</label>
    <type>Checkbox</type>
</CustomField>