Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Question_10__c.field-meta.xml
<CustomField>
    <fullName>Question_10__c</fullName>
    <label>Question 10</label>
    <type>TextArea</type>
</CustomField>