Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Question_11__c.field-meta.xml
<CustomField>
    <fullName>Question_11__c</fullName>
    <label>Question 11</label>
    <type>TextArea</type>
</CustomField>