Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Question_12__c.field-meta.xml
<CustomField>
    <fullName>Question_12__c</fullName>
    <label>Question 12</label>
    <type>TextArea</type>
</CustomField>