Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>SurveyNew__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>