Frankbelford/uatv1ba/force-app/main/default/objects/SurveyResponse__c/recordTypes/Blue_Arrow_Response.recordType-meta.xml
<RecordType>
    <fullName>Blue_Arrow_Response</fullName>
    <active>true</active>
    <label>Blue Arrow Response</label>
</RecordType>